// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table cell test 1`] = `
<td>
  t1
</td>
`;

exports[`Table cell test 2`] = `
<td>
  t2
</td>
`;

exports[`Table row test 1`] = `
<tr>
  <td>
    t1
  </td>
  <td>
    t2
  </td>
</tr>
`;

exports[`Table row test 2`] = `
<tr>
  <td>
    t3
  </td>
  <td>
    t2
  </td>
</tr>
`;

exports[`Table test 1`] = `
<table>
  <thead>
    <tr>
      <th>
        f1
      </th>
      <th>
        f2
      </th>
      <th>
        f3
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        1
      </td>
      <td>
        one
      </td>
      <td>
        first
      </td>
    </tr>
    <tr>
      <td>
        2
      </td>
      <td>
        two
      </td>
      <td>
        second
      </td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <td>
        <button>
          Load more data...
        </button>
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`table test - load more 1`] = `
<table>
  <thead>
    <tr>
      <th>
        f1
      </th>
      <th>
        f2
      </th>
      <th>
        f3
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        1
      </td>
      <td>
        one
      </td>
      <td>
        first
      </td>
    </tr>
    <tr>
      <td>
        2
      </td>
      <td>
        two
      </td>
      <td>
        second
      </td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <td>
        <button>
          Load more data...
        </button>
      </td>
    </tr>
  </tfoot>
</table>
`;
